<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description"
                android:scaleType="fitEnd"
                app:srcCompat="@drawable/top_background1" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description"
                app:srcCompat="@drawable/img_1" />

            <TextView
                android:id="@+id/titlePersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/title_name"
                android:textColor="@color/sign_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_edit"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:paddingStart="23dp"
                android:textColorHint="@color/white"
                tools:ignore="RtlSymmetry"
                android:autofillHints="" />

            <TextView
                android:id="@+id/titlePersonEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/title_email"
                android:textColor="@color/sign_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPersonEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_edit"
                android:hint="@string/hint_email"
                android:inputType="textPersonName"
                android:paddingStart="23dp"
                android:textColorHint="@color/white"
                tools:ignore="RtlSymmetry,TextFields"
                android:autofillHints="" />

            <TextView
                android:id="@+id/titlePersonPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/title_password"
                android:textColor="@color/sign_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPersonPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_edit"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingStart="23dp"
                android:textColorHint="@color/white"
                tools:ignore="RtlSymmetry"
                android:autofillHints="" />

            <Button
                android:id="@+id/button"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_orange"
                android:text="@string/btn_text_sign_up"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>